welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
       	if(estFaceMur()==true){return true}
                                      ^SnakeBuggle:8: warning: enclosing method postion_finale has result type Unit: return value discarded
       	if(estFaceMur()==true){return true}
                               ^SnakeBuggle:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    if(estFaceMur()==true){return true}}}
                                  ^SnakeBuggle:12: warning: enclosing method postion_finale has result type Unit: return value discarded
    if(estFaceMur()==true){return true}}}
                           ^SnakeBuggle:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false 
         ^SnakeBuggle:13: warning: enclosing method postion_finale has result type Unit: return value discarded
  return false 
  ^SnakeBuggle:25: error: not found: value position_finale
do {serpent()}while(position_finale()==false)
                    ^